# buildtools

./: BUILD.bazel
api_proto/: BUILD.bazel  api.proto
buildifier/: buildifier.go  integration_test.sh
buildifier/config/: BUILD.bazel  config.go  config_test.go
buildifier/utils/: BUILD.bazel  utils.go  utils_test.go
edit/: BUILD.bazel  edit.go  types.go
generatetables/: BUILD.bazel  generate_tables.go
lang/: BUILD.bazel  tables.gen.go
wspace/: workspace.go
