load("@rules_proto//proto:defs.bzl", "proto_library")
load("@build_stack_rules_proto//rules/go:proto_go_library.bzl", "proto_go_library")
load("@build_stack_rules_proto//rules:proto_compile.bzl", "proto_compile")

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    visibility = ["//visibility:public"],
)

proto_compile(
    name = "api_go_compile",
    output_mappings = ["api.pb.go=github.com/bazelbuild/buildtools/api_proto/api.pb.go"],
    outputs = ["api.pb.go"],
    plugins = ["@build_stack_rules_proto//plugin/golang/protobuf:protoc-gen-go"],
    proto = "api_proto",
)

proto_go_library(
    name = "api_go_proto",
    srcs = ["api.pb.go"],
    importpath = "github.com/bazelbuild/buildtools/api_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
